--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -35,7 +35,7 @@
         "blog": {
             "available": "PriceWise a un blog!",
             "join": "Joignez-vous à la discussion!",
-            "description": "Nous dicuterons de stratégies de magasinage, de fonctionalités de l'application et de la technologie derrière PriceWise"
+            "description": "Nous discuterons de stratégies de magasinage, de fonctionalités de l'application et de la technologie derrière PriceWise"
         },
         "chrome": {
             "extensionAvailable": "PriceWise a une extension Chrome!",
