--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -149,5 +149,9 @@
             "settingsSaved_success": "Informations enregistrées avec succès!",
             "settingsSaved_failure": "Une erreur est survenue durant l'enregistrement."
         }
-    }
+    },
+    "unsubscribe" : {
+        "title" : "Vous ne recevrez plus de notifications pour cette alerte",
+        "changedYourMind" : "Vous pouvez en tout temps réactiver les notifications en vous rendant sur la page de l'alerte"
+}
 }
