--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -152,6 +152,6 @@
     },
     "unsubscribe" : {
         "title" : "Vous ne recevrez plus de notification pour ce produit",
-        "changedYourMind" : "Vous pouvez en tout temps réactiver les notification en vous rendant sur la page du produit"
+        "changedYourMind" : "Vous pouvez en tout temps réactiver les notifications en vous rendant sur la page du produit"
 }
 }
