--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -125,12 +125,16 @@
         "listDeleted_failure": "Une erreur est survenue durant la suppression.",
         "listShared_success": "Liste partagée avec succès!",
         "listShared_failure": "Une erreur est survenue durant le partage.",
+        "listUnshared_success": "Partage de la liste arrêté avec succès!",
+        "listUnshared_failure": "Une erreur est survenue durant l'arrêt du partage.",
         "listUpdated_success": "Liste enregistrée avec succès!",
         "listUpdated_failure": "Une erreur est survenue durant la mise à jour.",
         "deleteConfirmation_title": "Supprimer une liste",
         "deleteConfirmation_description": "Êtes-vous certain de vouloir supprimer cette liste? Ses produits ne seront pas supprimées, seulement la liste.",
         "shareConfirmation_title": "Partager une liste",
-        "shareConfirmation_description": "Êtes-vous certain de vouloir partager cette liste? Une fois partagée, elle deviendra accessible à tous ceux qui auront le lien."
+        "shareConfirmation_description": "Êtes-vous certain de vouloir partager cette liste? Une fois partagée, elle deviendra accessible à tous ceux qui auront le lien.",
+        "unshareConfirmation_title": "Arrêter le partage d'une liste",
+        "unshareConfirmation_description": "Êtes-vous certain de vouloir arrêter le partage de cette liste? Ceux qui la suivent déjà n'y auront plus accès."
     },
     "sharedLists": {
         "title": "{{listName}}, par {{userName}}",
