--- a/src/shared/assets/locales/en-CA/translation.json
+++ b/src/shared/assets/locales/en-CA/translation.json
@@ -140,10 +140,15 @@
     "sharedLists": {
         "title": "{{listName}}, by {{userName}}",
         "followButton": "Add to my followed lists",
+        "listFollowed_success": "List followed successfully!",
+        "listFollowed_exception": "An error occurred during the operation. {{error}}",
         "urlModal": {
             "title": "Give this URL to your friends to give them access to your list!",
             "copyButton": "Copy",
             "copySuccess": "Copied to clipboard!"
+        },
+        "errors": {
+            "cannotFollow": "You cannot follow your own list."
         }
     },
     "followedLists": {
